# uniwal

./: CMakeLists.txt  LICENSE  README.md  run.sh
app/: main.cpp
uniwal/: orbit.cpp  orbit.hpp  orbit.test.cpp  random.cpp  random.hpp  random.test.cpp
